<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="65dp"
                android:background="@drawable/round_from_top"
                android:orientation="vertical">

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:elevation="5dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="25dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/round_corner"
                        android:backgroundTint="#4061A3"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="14dp">

                        <TextView
                            android:fontFamily="@font/roboto_regular"
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in_with_title"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/round_corner_for_google_btn"
                        android:backgroundTint="#db4a39"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="14dp">

                        <TextView
                            android:fontFamily="@font/roboto_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in_with_google"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0.5dp"
                            android:background="@color/secondaryTextColor" />

                        <TextView
                            android:fontFamily="@font/roboto_light"
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="Or"
                            android:textColor="@color/secondaryTextColor" />

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0.5dp"
                            android:background="@color/secondaryTextColor" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_rectangle"
                        android:padding="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            android:textColorHint="@color/primaryTextColor"
                            android:textSize="13dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_rectangle"
                        android:padding="5dp">

                        <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:fontFamily="@font/roboto_regular"
                            android:textColorHint="@color/primaryTextColor"
                            android:textSize="13dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="signup"
                        android:padding="10dp"
                        android:text="@string/dont_have_an_account"
                        android:textColor="@color/primaryTextColor" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cl1"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rectangle_little_round"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:padding="20dp"
                tools:targetApi="lollipop">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:tint="@android:color/black" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>